# aegis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  test
aegis/: Cargo.toml
aegis-GUI/: Cargo.toml
aegis-TUI/: Cargo.toml
aegis-arch/: Cargo.toml
aegis-arch/src/: main.rs
aegis-arch/src/functions/: base.rs  browsers.rs  desktops.rs  displaymanagers.rs  locale.rs  mod.rs  network.rs  shells.rs  terminals.rs  themes.rs  users.rs
aegis-arch/src/internal/: config.rs  hardware.rs  install.rs  mod.rs  secure.rs  services.rs
aegis-backend/src/: args.rs
aegis-fedora/: Cargo.toml
aegis-fedora/src/: main.rs
aegis-fedora/src/functions/: base.rs  browsers.rs  desktops.rs  displaymanagers.rs  locale.rs  network.rs  shells.rs  terminals.rs  themes.rs  users.rs
aegis-fedora/src/internal/: config.rs  hardware.rs  install.rs  secure.rs  services.rs
aegis-installer/: Cargo.toml
aegis-installer/src/: main.rs
aegis-installer/src/functions/: users.rs
aegis-nix/: Cargo.toml
aegis-nix/src/: main.rs
aegis-nix/src/functions/: base.rs  browsers.rs  desktops.rs  displaymanagers.rs  locale.rs  network.rs  shells.rs  terminals.rs  themes.rs  users.rs
aegis-nix/src/internal/: config.rs  hardware.rs  install.rs  mod.rs
aegis/src/: drives.rs  macros.rs  main.rs  widget.rs
aegis/src/installer/: drivepages.rs  mod.rs  users.rs
back-end/src/functions/: base.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/functions/: base.rs  desktops.rs  displaymanagers.rs  locale.rs  mod.rs  network.rs  shells.rs  themes.rs  users.rs
core/src/internal/: config.rs  hardware.rs  install.rs  mod.rs  packages.rs  secure.rs  services.rs
shared/: Cargo.toml
shared/src/: args.rs  encrypt.rs  exec.rs  files.rs  keyboard.rs  logging.rs  mod.rs  partition.rs  returncode_eval.rs  strings.rs
src/: args.rs  logging.rs  main.rs
src/functions/: base.rs  browsers.rs  desktops.rs  displaymanagers.rs  locale.rs  mod.rs  partition.rs  shells.rs  strap.sh  terminals.rs  themes.rs  unakite.rs  users.rs
src/internal/: config.rs  files.rs  hardware.rs  install.rs  mod.rs  returncode_eval.rs  secure.rs  services.rs  virt_check.rs
