[package]
name = "athena-aegis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "athena-aegis"
path = "src/main.rs"

[dependencies]
clap = {version = "4.4.4", features = ["derive"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
log = "0.4.20"
flexi_logger = {version = "0.27.2", features = ["colors"] }
human-panic = "1.2.0"
regex = "1.9.5"
