[package]
name = "aegis"
version = "0.3.2"
edition = "2024"

[dependencies]
clap.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
core = { path = "../core" }
shared = { path = "../shared" }
ansi-to-tui = "7.0.0"
anyhow = "1.0.98"
base64 = "0.22.1"
flate2 = { version = "1.1.2", features = ["rust_backend"] }
fuzzy-matcher = "0.3.7"
rand = "0.9"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
strip-ansi-escapes = "0.2.1"
tempfile = "3.20.0"
throbber-widgets-tui = "0.9.0"

[[bin]]
name = "aegis"
path = "src/main.rs"