[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# Specify that this is a library crate
[lib]
name = "shared"
path = "src/mod.rs"

[dependencies]
clap = {version = "4.5.20", features = ["derive"] }
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
log = "0.4.22"
flexi_logger = {version = "0.29.4", features = ["colors"] }
human-panic = "2.0.2"
regex = "1.11.1"
