[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# Specify that this is a library crate
[lib]
name = "shared"
path = "src/mod.rs"

[dependencies]
clap = {version = "4.5", features = ["derive"] }
glob = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
flexi_logger = {version = "0.31", features = ["colors"] }
human-panic = "2.0"
regex = "1.11"
