[package]
name = "shared"
version = "0.1.0"
edition = "2024"

# Specify that this is a library crate
[lib]
name = "shared"
path = "src/mod.rs"

[dependencies]
clap.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
glob = "0.3"
once_cell = "1.19"
flexi_logger = {version = "0.31", features = ["colors"] }
